--- a/project/index.html
+++ b/project/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-  <title>project</title>
+  <title>广州赣之韵科技有限公司</title>
 </head>
 
 <body>
