--- a/project/index.html
+++ b/project/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-  <title>广州赣之韵科技有限公司</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <title>广州赣之韵科技有限公司</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
 </body>
-<script src="https://unpkg.com/swiper/js/swiper.min.js"> </script>
+<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 
 </html>
