将swiper插件css及js文件存本地，加快速度

--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link rel="stylesheet" href="static/css/swiper.min.css" />
     <title>广州赣之韵科技有限公司</title>
 </head>
 
@@ -12,6 +12,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 </body>
-<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script src="static/js/swiper.min.js"></script>
 
 </html>
